Fixed background, spacing, footer, progress on update, save, delete

--- a/web/_css/home.css
+++ b/web/_css/home.css
@@ -22,7 +22,9 @@ b         {font-size:9pt;}
 
 html , body{
     line-height: 1;
-    background : #9999CC;
+  /*  background : #9999CC; */
+    color:#404040;
+
 
     /* background-image: url(../_images/elogo.jpg); */
 }
@@ -54,14 +56,7 @@ html , body{
     height: 700px;
     /*border: 5px solid blue;*/
 }
-#page
-{
-    width: 85%;
-    margin: 0 auto;
-    /*float: right;*/
-    z-index: -1;
-    /*border: 5px solid magenta;*/
-}
+
 #debug {
     bottom: 0;
     left: 10px;
@@ -69,25 +64,31 @@ html , body{
     padding-top: 2px;
     /*border: 5px solid purple;*/
 }
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 10px;
-    right: 10px;
-    padding-top: 18px;
-    /*background: url(../_images/bg-footer.png) repeat-x left top; */
-    /*border: 5px solid black;*/
-}
-.footer p {
-    font-size: 14px;
-    font-family: 'Trebuchet MS', Arial, sans-serif;
-    padding: .5em .25em .5em 1em;
-    color:rgb(55,76,119);
-    background: rgb(110,138,195);
-    border-radius: 2px 0 0 0;
-    margin: 0;
+#page
+{
+  position: relative;
+  height: 95vh;
 }
 
+
+
+#content
+{
+  padding-bottom: 1.5rem; /* Footer height */
+}
+
+footer
+{
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  padding-top: 3px;
+  background-color: powderblue;
+  text-align: center;
+  height: 1.5rem;
+  font-family:"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-style: italic;
+}
 #nav
 {
     width: 10%;
@@ -259,7 +260,7 @@ input
 }
 .tablesorter
 {
-    width: 80%;
+    width: 90%;
 }
 #tasktable
 {
